force-app/main/default/objects/Location__c/fields/ADMIN_Tag__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Tag__c</fullName>
    <description>Used for tagging records for admin imports/updates</description>
    <label>ADMIN Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>