force-app/main/default/objects/Location__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Populated by flow, returns the maximum value of the Capacity field for all associated leads.</description>
    <inlineHelpText>Populated by flow, returns the maximum value of the Capacity field for all associated leads.</inlineHelpText>
    <label>Licensed Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>