force-app/main/default/objects/Location__c/fields/Center_Type__c.field-meta.xml
<CustomField>
    <fullName>Center_Type__c</fullName>
    <label>z - Center Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Center_Type</valueSetName>
    </valueSet>
</CustomField>