force-app/main/default/objects/Location__c/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <description>Value based on the related Account, or Stage of Org.</description>
    <inlineHelpText>Value based on the related Account, or Stage of Org.</inlineHelpText>
    <label>Customer Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Sales</fullName>
            </value>
            <value>
                <fullName>Resting</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>