force-app/main/default/objects/Location__c/fields/Location_Email__c.field-meta.xml
<CustomField>
    <fullName>Location_Email__c</fullName>
    <label>Location Email</label>
    <type>Email</type>
</CustomField>