force-app/main/default/objects/Location__c/fields/LOGIC_Associated_Leads__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Associated_Leads__c</fullName>
    <label>LOGIC Associated Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>