force-app/main/default/objects/Location__c/fields/Non_Target__c.field-meta.xml
<CustomField>
    <fullName>Non_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This specific Location has been determined at the time to be a Non-Target for Sales</inlineHelpText>
    <label>Non-Target</label>
    <type>Checkbox</type>
</CustomField>