force-app/main/default/objects/Location__c/fields/Normalized_Phone_Length__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone_Length__c</fullName>
    <formula>LEN( Normalized_Phone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Phone Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>