force-app/main/default/objects/Location__c/fields/Normalized_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_School_Name__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(School_Name__c ,&quot;&apos;&quot;,&quot;&quot;) ,&quot;’&quot;,&quot;&quot;) ,&quot;‘&quot;,&quot;&quot;) ,&quot;/&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;) ,&quot;-&quot;,&quot;&quot;) ,&quot;,&quot;,&quot;&quot;) ,&quot;#&quot;,&quot;&quot;) ,&quot;&amp;&quot;,&quot;&quot;) ,&quot;)&quot;,&quot;&quot;) ,&quot;(&quot;,&quot;&quot;) ,&quot;)&quot;,&quot;&quot;) ,&quot;!&quot;,&quot;&quot;) ,&quot;[&quot;,&quot;&quot;) ,&quot;]&quot;,&quot;&quot;) ,&quot;\&quot;&quot;,&quot;&quot;) ,&quot;“&quot;,&quot;&quot;) ,&quot;”&quot;,&quot;&quot;) ,&quot;=&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized School Name</label>
    <type>Text</type>
</CustomField>