force-app/main/default/objects/Location__c/fields/Organization_Stage__c.field-meta.xml
<CustomField>
    <fullName>Organization_Stage__c</fullName>
    <description>Displays the related Organization Stage</description>
    <formula>TEXT(Name__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the related Organization Stage</inlineHelpText>
    <label>Organization Stage</label>
    <type>Text</type>
</CustomField>