force-app/main/default/objects/Location__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this Location is the primary within the Organization.</description>
    <inlineHelpText>Identifies if this Location is the primary within the Organization.</inlineHelpText>
    <label>Primary Location</label>
    <type>Checkbox</type>
</CustomField>