force-app/main/default/objects/Location__c/fields/Related_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Org_ID__c</fullName>
    <description>Admin field to show 18-digit ID of the Org that the Location is related to.</description>
    <formula>CASESAFEID( Name__r.Id )</formula>
    <inlineHelpText>Admin field to show 18-digit ID of the Org that the Location is related to.</inlineHelpText>
    <label>Related Org ID</label>
    <type>Text</type>
</CustomField>