force-app/main/default/objects/Location__c/recordTypes/Standard_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Standard_Record_Type</fullName>
    <active>true</active>
    <label>Standard Record Type</label>
</RecordType>